// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map given items and placeholder but no separator renders 1`] = `
<body>
  <div>
    <div
      data-testid="some-item-id"
    />
    <div
      data-testid="some-other-item-id"
    />
  </div>
</body>
`;

exports[`Map given more than one item and separator renders 1`] = `
<body>
  <div>
    <div
      data-testid="some-item-id"
    />
    <div
      data-testid="separator"
    >
      Some separator
    </div>
    <div
      data-testid="some-other-item-id"
    />
    <div
      data-testid="separator"
    >
      Some separator
    </div>
    <div
      data-testid="some-another-item-id"
    />
  </div>
</body>
`;

exports[`Map given more than one item and separator using left and right renders 1`] = `
<body>
  <div>
    <div
      data-testid="some-item-id"
    />
    <div
      data-testid="separator-between-some-item-id-and-some-other-item-id"
    >
      Some separator between
      some-item-id
      and
      some-other-item-id
    </div>
    <div
      data-testid="some-other-item-id"
    />
    <div
      data-testid="separator-between-some-other-item-id-and-some-another-item-id"
    >
      Some separator between
      some-other-item-id
      and
      some-another-item-id
    </div>
    <div
      data-testid="some-another-item-id"
    />
  </div>
</body>
`;

exports[`Map given no items and placeholder renders 1`] = `
<body>
  <div>
    <div
      data-testid="some-placeholder"
    >
      Some placeholder
    </div>
  </div>
</body>
`;

exports[`Map given no items but no placeholder renders 1`] = `
<body>
  <div />
</body>
`;
